# oralcancerpredfin

./: .dockerignore  Dockerfile  Procfile  README.md  app.py  packages.txt  pyproject.toml  render.yaml  requirements.txt  setup.sh  verify_model.py
