[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oral-cancer-prediction"
version = "0.1.0"
description = "Oral Cancer Prediction App"
requires-python = ">=3.9,<3.10"
dependencies = [
    "streamlit==1.19.0",
    "opencv-python-headless==4.6.0.66",
    "scikit-learn==1.1.3",
    "numpy==1.23.5",
    "joblib==1.2.0",
    "Pillow==9.3.0",
    "scipy==1.10.1",
    "altair==4.2.0",
    "pandas==1.5.3"
]
